5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1662_2969.log
== TEST (2019-04-15 14:10:34) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = (j1 + j2)*25/100
if(j = 2):
	print(d, 2)
else:
	print(j1, 2)
	
-- ERROR:
File "XXXX", line 5
    if(j = 2):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:10:45) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = (j1 + j2)*25/100
if(j == 2):
	print(d, 2)
else:
	print(j1, 2)
	
-- OUTPUT:
38.9375 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:11:20) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = (j1 + j2)*25/100
if(j == 2):
	print(round(d, 2))
else:
	print(round(j1, 2))
	
-- OUTPUT:
38.94
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:11:32) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = (j1 + j2)*25/100
if(j == 2):
	print(round(d, 2))
else:
	print(round(j1, 2))
	
-- EXECUTION TIME:
0.121594
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
38.94
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
55.06
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:12:14) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = (j1 + (j2*25/100)
if(j == 2):
	print(round(d, 2))
else:
	print(round(j1, 2))
	
-- ERROR:
File "XXXX", line 5
    if(j == 2):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:12:26) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = (j1 + j2*(25/100)
if(j == 2):
	print(round(d, 2))
else:
	print(round(j1, 2))
	
-- ERROR:
File "XXXX", line 5
    if(j == 2):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:12:57) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = (j1 + j2*(25/100)
if(j == 2):
	print(round(d, 2))
else:
	print(round(j1, 2))
	
-- ERROR:
File "XXXX", line 5
    if(j == 2):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:13:04) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = (j1 + j2*(25/100)
if(j = 2):
	print(round(d, 2))
else:
	print(round(j1, 2))
	
-- ERROR:
File "XXXX", line 5
    if(j = 2):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:13:31) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = (j1 + j2*(25/100)
if(j != 2):
	print(round(j1, 2))
else:
	print(round(d, 2))
	
-- ERROR:
File "XXXX", line 5
    if(j != 2):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:14:00) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = (j1 + j2)*(25/100)
if(j != 2):
	print(round(j1, 2))
else:
	print(round(d, 2))
	
-- OUTPUT:
38.94
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:15:05) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = j1 + (j2 * 25/100)
if(j != 2):
	print(round(j1, 2))
else:
	print(round(d, 2))
	
-- OUTPUT:
80.56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:15:42) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = j1 + j2 * (25/100)
if(j != 2):
	print(round(j1, 2))
else:
	print(round(d, 2))
	
-- OUTPUT:
80.56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:16:27) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = (j1 + j2) * (25/100)
if(j == 2):
	print(round(d, 2))
else:
	print(round(j1, 2))
	
-- OUTPUT:
38.94
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:18:36) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = j1 + j2
ds = d * (25/100)
if(j == 2):
	print(round(ds, 2))
else:
	print(round(j1, 2))
	
-- OUTPUT:
38.94
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:21:07) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = j1 + (j2 - j2*(25/100))

if(j == 2):
	print(round(d, 2))
else:
	print(round(j1, 2))
	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:21:23) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = j1 + (j2 - j2*(25/100))

if(j == 2):
	print(round(d, 2))
else:
	print(round(j1, 2))
	
-- EXECUTION TIME:
0.175826
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:22:05) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
d = j1 + (j2 - j2*(25/100))

if(j == 2):
	print(round(d, 1))
else:
	print(round(j1, 1))
	
-- OUTPUT:
130.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:24:03) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
p = j2 - (j2 * 25/100)
d = j1 + p

if(j == 2):
	print(round(d, 1))
else:
	print(round(j1, 1))
	
-- OUTPUT:
130.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:24:16) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
p = j2 - (j2 * 25/100)
d = j1 + p

if(j == 2):
	print(round(d, 1))
else:
	print(round(j1, 1))
	
-- EXECUTION TIME:
0.109714
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.7
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:25:09) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input(round("preco do primeiro jogo: ", 2))
j2 = float(input("preco do segundo jogo: "))
p = j2 - (j2 * 25/100)
d = j1 + p

if(j == 2):
	print(round(d, 1))
else:
	print(round(j1, 1))
	
-- ERROR:
File "XXXX", line 3
    j2 = float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:25:37) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
p = j2 - (j2 * 25/100)
d = j1 + p
if(j == 2):
	print(round(d, 1))
else:
	print(round(j1, 1))
	
-- OUTPUT:
130.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:25:54) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
p = j2 - (j2 * 25/100)
d = j1 + p
if(j == 2):
	print(round(d, 1))
else:
	print(round(j1, 1))
	
-- EXECUTION TIME:
0.183858
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.7
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:26:34) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
p = j2 - (j2 * 25/100)
d = j1 + p
if(j == 2):
	print(round(d, 1))
else:
	print(round(j1, 1))
	
-- OUTPUT:
130.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:26:47) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
p = j2 - (j2 * 25/100)
d = j1 + p
if(j == 2):
	print(round(d, 1))
else:
	print(round(j1, 1))
	
-- OUTPUT:
130.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:28:34) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
p = j2 - (j2 * 25/100)
d = j1 + p
if(j == 1):
	print(round(j1, 1))
else:
	print(round(d, 1))
	
-- OUTPUT:
130.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:28:47) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
p = j2 - (j2 * 25/100)
d = j1 + p
if(j == 1):
	print(round(j1, 1))
else:
	print(round(d, 1))
	
-- EXECUTION TIME:
0.151471
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.7
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:30:19) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
p = j2 - (j2 * 25/100)
d = j1 + p
if(j == 1):
	print(round(j1, 1))
else:
	print(round(d, 1))
	
-- OUTPUT:
130.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:31:43) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
p = j2 - (j2 * 25/100)
d = j1 + p
if(j == 1):
	print(round(j1, 1))
else:
	print(round(d, 1))
	
-- EXECUTION TIME:
0.13537
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.7
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:32:47) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
p = j2 - (j2 * 25/100)
d = j1 + p
if(j != 1):
	print(round(d, 1))
else:
	print(round(j1, 1))
	
-- OUTPUT:
130.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:33:04) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
p = j2 - (j2 * 25/100)
d = j1 + p
if(j != 1):
	print(round(d, 1))
else:
	print(round(j1, 1))
	
-- EXECUTION TIME:
0.183746
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.7
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:34:57) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
p = j2 - (j2 * 25/100)
d = j1 + p
if(j == 2):
	print(round(d, 1))
else:
	print(round(j1, 1))
	
-- OUTPUT:
130.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:35:10) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
p = j2 - (j2 * 25/100)
d = j1 + p
if(j == 2):
	print(round(d, 1))
else:
	print(round(j1, 1))
	
-- EXECUTION TIME:
0.197433
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.7
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:35:18) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
p = j2 - (j2 * 25/100)
d = j1 + p
if(j == 2):
print(round(d, 1))
else:
print(round(j1, 1))
	
-- EXECUTION TIME:
0.171154
-- ERROR:
  File "/home/codebench/codes/1662/2969/main.py", line 7
    print(round(d, 1))
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:35:18) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
p = j2 - (j2 * 25/100)
d = j1 + p
if(j == 2):
print(round(d, 1))
else:
print(round(j1, 1))
	
-- ERROR:
File "XXXX", line 7
    print(round(d, 1))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:36:10) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
p = j2 - (j2 * 25/100)
d = j1 + p
if(j == 2):
	print(round(d, 1))
else:
	print(round(j1, 1))
	
-- OUTPUT:
130.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:37:20) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo jogo: "))
p = j2 - (j2 * 25/100)
d = j1 + p
if(j == 2):
	print(round(d, 1))
else:
	print(round(j1, 1))
	
-- OUTPUT:
130.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:44:25) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
if(j == 2):
j2 = float(input("preco do segundo jogo: "))	
d = j1 + (j2 - (j2*(25/100)))
	print(round(d, 1))
else:
	print(round(j1, 1))
	
-- ERROR:
File "XXXX", line 4
    j2 = float(input())	
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:46:27) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do primeiro: "))
d = j1 + (j2 - j2*25/100)
if(j == 2):
	print(round(d, 1))
else:
	print(round(j1, 1))
	
-- OUTPUT:
130.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:47:02) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do primeiro: "))
d = j1 + (j2 - j2*25/100)
if(j == 2):
	print(round(d, 2))
else:
	print(round(j1, 2))
	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:47:39) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do primeiro: "))
d = j1 + (j2 - j2*25/100)
if(j == 2):
	print(round(d, 2))
else:
	print(round(j1, 2))
	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:51:03) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do primeiro: "))
d = j1 + (j2 - j2*25/100)
if(j == 2):
	print(round(d, 2))
else:
	print(round(j1, 2))
	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:53:06) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo se j != 1 "))
d = j1 + (j2 - j2*25/100)
if(j == 2):
	print(round(d, 2))
else:
	print(round(j1, 2))
	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:53:20) 
-- CODE:
j = int(input("quantidade de jogos(1 / 2): "))
j1 = float(input("preco do primeiro jogo: "))
j2 = float(input("preco do segundo se j != 1 "))
d = j1 + (j2 - j2*25/100)
if(j == 2):
	print(round(d, 2))
else:
	print(round(j1, 2))
	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
